Goerli Network Update

--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
     <input id="ethAmount" placeholder="0.1" />
     <button id="fundButton">Fund</button>
     <!-- Form -->
+    <p id="getBalancePlacHolder"></p>
   </body>
 </html>
